initial_central/cluster/validatingwebhookconfiguration-metallb-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: metallb-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFoTVJBd0RnWURWUVFLRXdkdFpYUmgKYkd4aU1RMHdDd1lEVlFRREV3UmpaWEowTUI0WERUSTJNRFl4TmpFek16UXdORm9YRFRNMk1EWXhNekUwTXpRdwpORm93SVRFUU1BNEdBMVVFQ2hNSGJXVjBZV3hzWWpFTk1Bc0dBMVVFQXhNRVkyVnlkRENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTGdOV0cyaEhraVJydmtQU3NMbXU1YmIwTmU1U2dBbWhETk8KVllUNXp3aHh0dll2OTBoYis2dWwxaXpaMnk1WHNBL3VTT011MHMzSXNtMVNka3c5OVorTHFKOWdKL0lkV3I1VQpPdzhrOXlHN3p0c2 [...]
    service:
      name: metallb-webhook-service
      namespace: metallb-system
      path: /validate-metallb-io-v1beta2-bgppeer
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: bgppeersvalidationwebhook.metallb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - metallb.io
    apiVersions:
    - v1beta2
    operations:
    - CREATE
    - UPDATE
    resources:
    - bgppeers
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFoTVJBd0RnWURWUVFLRXdkdFpYUmgKYkd4aU1RMHdDd1lEVlFRREV3UmpaWEowTUI0WERUSTJNRFl4TmpFek16UXdORm9YRFRNMk1EWXhNekUwTXpRdwpORm93SVRFUU1BNEdBMVVFQ2hNSGJXVjBZV3hzWWpFTk1Bc0dBMVVFQXhNRVkyVnlkRENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTGdOV0cyaEhraVJydmtQU3NMbXU1YmIwTmU1U2dBbWhETk8KVllUNXp3aHh0dll2OTBoYis2dWwxaXpaMnk1WHNBL3VTT011MHMzSXNtMVNka3c5OVorTHFKOWdKL0lkV3I1VQpPdzhrOXlHN3p0c2 [...]
    service:
      name: metallb-webhook-service
      namespace: metallb-system
      path: /validate-metallb-io-v1beta1-bfdprofile
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: bfdprofilevalidationwebhook.metallb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - metallb.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - DELETE
    resources:
    - bfdprofiles
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFoTVJBd0RnWURWUVFLRXdkdFpYUmgKYkd4aU1RMHdDd1lEVlFRREV3UmpaWEowTUI0WERUSTJNRFl4TmpFek16UXdORm9YRFRNMk1EWXhNekUwTXpRdwpORm93SVRFUU1BNEdBMVVFQ2hNSGJXVjBZV3hzWWpFTk1Bc0dBMVVFQXhNRVkyVnlkRENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTGdOV0cyaEhraVJydmtQU3NMbXU1YmIwTmU1U2dBbWhETk8KVllUNXp3aHh0dll2OTBoYis2dWwxaXpaMnk1WHNBL3VTT011MHMzSXNtMVNka3c5OVorTHFKOWdKL0lkV3I1VQpPdzhrOXlHN3p0c2 [...]
    service:
      name: metallb-webhook-service
      namespace: metallb-system
      path: /validate-metallb-io-v1beta1-bgpadvertisement
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: bgpadvertisementvalidationwebhook.metallb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - metallb.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - bgpadvertisements
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFoTVJBd0RnWURWUVFLRXdkdFpYUmgKYkd4aU1RMHdDd1lEVlFRREV3UmpaWEowTUI0WERUSTJNRFl4TmpFek16UXdORm9YRFRNMk1EWXhNekUwTXpRdwpORm93SVRFUU1BNEdBMVVFQ2hNSGJXVjBZV3hzWWpFTk1Bc0dBMVVFQXhNRVkyVnlkRENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTGdOV0cyaEhraVJydmtQU3NMbXU1YmIwTmU1U2dBbWhETk8KVllUNXp3aHh0dll2OTBoYis2dWwxaXpaMnk1WHNBL3VTT011MHMzSXNtMVNka3c5OVorTHFKOWdKL0lkV3I1VQpPdzhrOXlHN3p0c2 [...]
    service:
      name: metallb-webhook-service
      namespace: metallb-system
      path: /validate-metallb-io-v1beta1-community
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: communityvalidationwebhook.metallb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - metallb.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - communities
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFoTVJBd0RnWURWUVFLRXdkdFpYUmgKYkd4aU1RMHdDd1lEVlFRREV3UmpaWEowTUI0WERUSTJNRFl4TmpFek16UXdORm9YRFRNMk1EWXhNekUwTXpRdwpORm93SVRFUU1BNEdBMVVFQ2hNSGJXVjBZV3hzWWpFTk1Bc0dBMVVFQXhNRVkyVnlkRENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTGdOV0cyaEhraVJydmtQU3NMbXU1YmIwTmU1U2dBbWhETk8KVllUNXp3aHh0dll2OTBoYis2dWwxaXpaMnk1WHNBL3VTT011MHMzSXNtMVNka3c5OVorTHFKOWdKL0lkV3I1VQpPdzhrOXlHN3p0c2 [...]
    service:
      name: metallb-webhook-service
      namespace: metallb-system
      path: /validate-metallb-io-v1beta1-ipaddresspool
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: ipaddresspoolvalidationwebhook.metallb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - metallb.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - ipaddresspools
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFoTVJBd0RnWURWUVFLRXdkdFpYUmgKYkd4aU1RMHdDd1lEVlFRREV3UmpaWEowTUI0WERUSTJNRFl4TmpFek16UXdORm9YRFRNMk1EWXhNekUwTXpRdwpORm93SVRFUU1BNEdBMVVFQ2hNSGJXVjBZV3hzWWpFTk1Bc0dBMVVFQXhNRVkyVnlkRENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTGdOV0cyaEhraVJydmtQU3NMbXU1YmIwTmU1U2dBbWhETk8KVllUNXp3aHh0dll2OTBoYis2dWwxaXpaMnk1WHNBL3VTT011MHMzSXNtMVNka3c5OVorTHFKOWdKL0lkV3I1VQpPdzhrOXlHN3p0c2 [...]
    service:
      name: metallb-webhook-service
      namespace: metallb-system
      path: /validate-metallb-io-v1beta1-l2advertisement
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: l2advertisementvalidationwebhook.metallb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - metallb.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - l2advertisements
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
